# social-media-scraper

./: .gitignore  README.md  pyproject.toml
social_media_scraper/: __init__.py  anti_detect.py  cookie.py  engine.py  response.py  scraper.py  scroll.py  types.py  utils.py
social_media_scraper/parsers/: __init__.py  douyin.py  x.py  xhs.py
social_media_scraper/rules/: douyin.json  x.json  xhs.json
